force-app/main/default/objects/ClanWar__c/ClanWar__c.object-meta.xml
<CustomObject>
    <label>Clan War</label>
    <nameField>
        <displayFormat>WAR-{0000}</displayFormat>
        <label>Clan War Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clan Wars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>