force-app/main/default/objects/ClanWar__c/fields/AttacksPerMember__c.field-meta.xml
<CustomField>
    <fullName>AttacksPerMember__c</fullName>
    <label>Attacks per Member</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>