force-app/main/default/objects/ClanWar__c/fields/PreparationStartTime__c.field-meta.xml
<CustomField>
    <fullName>PreparationStartTime__c</fullName>
    <label>Preparation Start Time</label>
    <type>DateTime</type>
</CustomField>