force-app/main/default/objects/ClanWar__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>clanNotFound</fullName>
            </value>
            <value>
                <fullName>accessDenied</fullName>
            </value>
            <value>
                <fullName>notInWar</fullName>
            </value>
            <value>
                <fullName>inMatchmaking</fullName>
            </value>
            <value>
                <fullName>enterWar</fullName>
            </value>
            <value>
                <fullName>matched</fullName>
            </value>
            <value>
                <fullName>preparation</fullName>
            </value>
            <value>
                <fullName>war</fullName>
            </value>
            <value>
                <fullName>inWar</fullName>
            </value>
            <value>
                <fullName>ended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>