force-app/main/default/objects/ClanWar__c/fields/TeamSize__c.field-meta.xml
<CustomField>
    <fullName>TeamSize__c</fullName>
    <label>Team Size</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>