force-app/main/default/objects/ClanWar__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <description>clan tag + opponent tag + preparation starttime</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>