force-app/main/default/objects/ClanWar__c/fields/WarStartTime__c.field-meta.xml
<CustomField>
    <fullName>WarStartTime__c</fullName>
    <label>War Start Time</label>
    <type>DateTime</type>
</CustomField>